06-kong-ingress-tcp-route/mongo-sts.yml
apiVersion: "apps/v1"
kind: "StatefulSet"
metadata: 
  name: "mongo-db"
spec:
  serviceName: "mongo-db" 
  replicas: 1
  selector: 
    matchLabels: 
      app: "mongo-db"
  template: 
    metadata: 
      labels: 
        app: "mongo-db"
    spec: 
      containers: 
        - name: "mongo-db"
          image: "mongo"
          imagePullPolicy: "Always"
          command: ["/bin/sh"]
          args: ["-c", "mongod --replSet=rs0 --bind_ip_all"]
          ports: 
            - containerPort: 27017
              name: "mongodb"
