06-kong-ingress-tcp-route/mongo-svc.yml
apiVersion: "v1"
kind: "Service"
metadata: 
  name: "mongo-db"
  labels: 
    app: "mongo-db"
spec: 
  ports: 
    - name: "mongodb"
      port: 27017
      targetPort: 27017
  clusterIP: "None"
  selector: 
    app: "mongo-db"
