06-kong-ingress-tcp-route/mongo-tcp-route.yml
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TCPRoute
metadata:
 name: mongo
spec:
 parentRefs:
 - name: kong
   sectionName: stream-9000
 rules:
 - backendRefs:
   - name: mongo-db
     port: 27017
